Fix spacing in description list styles

--- a/sass/_foundation.scss
+++ b/sass/_foundation.scss
@@ -22,7 +22,7 @@
   --text-base-size: 100%;
   --text-base-line-height: 1.7;
   --text-scale-ratio: 1.5;
-  --text-letter-spacing: -0.0125rem;
+  --text-letter-spacing: -0.015rem;
   
   --text-sm: calc(1em / var(--text-scale-ratio));
   --text-md: calc(1em * var(--text-scale-ratio));
